# desafios-tecnicos

./: .gitignore  README.md  clone-forks.sh  editorias.csv  requirements.txt
dasafio_3/: README.md
desafio_1/: README.md  fastapi_server.py  fasthttp_server.go  flask_server.py  go.mod  go.sum  pyproject.toml
desafio_1/fastapi_app/: __main__.py
desafio_1/fasthttp_project/: go.mod  main.go
desafio_1/flask_app/: app.py
desafio_2/: README.md  app.py  flask_server.py
desafio_2/flask_app/: app.py  editorias.csv
desafio_2/flask_app/templates/: camera.html  catfact.html  editorias.html  hora.html
desafio_3/: README.md
