[project]
name = "flask-app"
version = "0.1.0"
description = "Hello World in Flask"
authors = [
    {name = "Pedro Hirschle", email = "pedrohirschle@outlook.com"}
]
readme = "README.md"
package-mode = false
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
