[project]
name = "desafio_1"
version = "0.1.0"
description = "Desafio 1 - Hello World em Flask e FastAPI"
authors = [
    { name = "Pedro Hirschle", email = "pedrohirschle@outlook.com" }
]
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.108.0,<0.110.0)",
    "uvicorn[standard] (>=0.23.0,<0.25.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
